--- a/lesson_6/index.html
+++ b/lesson_6/index.html
@@ -246,16 +246,7 @@
                 <div class="card-footer">
                   <p class="card-number">3778 **** **** 1234</p>
                   <div class="card-logos">
-                    <img
-                      class="card-logo__left"
-                      src="./images/Ellipse.svg"
-                      alt="Card Logo"
-                    />
-                    <img
-                      class="card-logo__right"
-                      src="./images/Ellipse.svg"
-                      alt="Card Logo"
-                    />
+                    <img src="./images/logo-ellipse-card.svg" alt="Logo" />
                   </div>
                 </div>
               </div>
@@ -267,26 +258,261 @@
             <div class="card-statistic__container">
               <h2 class="card-statistic__title">Card Expense Statistics</h2>
               <div class="card-statistic__chart">
-                <img src="./images/chart.svg" alt="chart" />
+                <img
+                  class="card-statistic__chart-image"
+                  src="./images/chart.svg"
+                  alt="chart"
+                />
                 <ul class="card-statistic__legend">
                   <li class="card-statistic__legend-item">
-                    <img src="" alt="blue color" />
-                    <p>DBL Bank</p>
+                    <img
+                      class="card-statistic__image"
+                      src="./images/blue-ellipse.svg"
+                      alt="blue color"
+                    />
+                    <p class="card-statistic__text">DBL Bank</p>
                   </li>
                   <li class="card-statistic__legend-item">
-                    <img src="" alt="salat color" />
-                    <p>BRC Bank</p>
+                    <img
+                      class="card-statistic__image"
+                      src="./images/salat-ellipse.svg"
+                      alt="salat color"
+                    />
+                    <p class="card-statistic__text">BRC Bank</p>
                   </li>
                   <li class="card-statistic__legend-item">
-                    <img src="" alt="pink color" />
-                    <p>ABM Bank</p>
+                    <img
+                      class="card-statistic__image"
+                      src="./images/pink-ellipse.svg"
+                      alt="pink color"
+                    />
+                    <p class="card-statistic__text">ABM Bank</p>
                   </li>
                   <li class="card-statistic__legend-item">
-                    <img src="" alt="orange color" />
-                    <p>MCP Bank</p>
+                    <img
+                      class="card-statistic__image"
+                      src="./images/orange-ellipse.svg"
+                      alt="orange color"
+                    />
+                    <p class="card-statistic__text">MCP Bank</p>
                   </li>
                 </ul>
               </div>
+            </div>
+            <div class="card-list__container">
+              <h2 class="card-list__title">Card List</h2>
+              <div class="card-list__info">
+                <ul class="card-list__items">
+                  <!-- first -->
+                  <li class="card-list__items-info">
+                    <div class="card-item__type">
+                      <img
+                        class="card-blue"
+                        src="./images/blue-card.svg"
+                        alt="blue-card"
+                      />
+                      <div>
+                        <p class="card-item__type-top">Card Type</p>
+                        <p class="card-item__type-bottom">Secondary</p>
+                      </div>
+                    </div>
+                    <div class="card-item__bank">
+                      <p class="card-item__type-top">Bank</p>
+                      <p class="card-item__type-bottom">DBL Bank</p>
+                    </div>
+                    <div class="card-item__card-number">
+                      <p class="card-item__type-top">Card Number</p>
+                      <p class="card-item__type-bottom">**** **** 5600</p>
+                    </div>
+                    <div class="card-item__namain-card">
+                      <p class="card-item__type-top">Namain Card</p>
+                      <p class="card-item__type-bottom">William</p>
+                    </div>
+                    <a class="card-item__link" href="#">View Details</a>
+                  </li>
+                  <!-- second -->
+                  <li class="card-list__items-info">
+                    <div class="card-item__type">
+                      <img
+                        class="card-pink"
+                        src="./images/pink-card.svg"
+                        alt="pink-card"
+                      />
+                      <div>
+                        <p class="card-item__type-top">Card Type</p>
+                        <p class="card-item__type-bottom">Secondary</p>
+                      </div>
+                    </div>
+                    <div class="card-item__bank">
+                      <p class="card-item__type-top">Bank</p>
+                      <p class="card-item__type-bottom">DBL Bank</p>
+                    </div>
+                    <div class="card-item__card-number">
+                      <p class="card-item__type-top">Card Number</p>
+                      <p class="card-item__type-bottom">**** **** 5600</p>
+                    </div>
+                    <div class="card-item__namain-card">
+                      <p class="card-item__type-top">Namain Card</p>
+                      <p class="card-item__type-bottom">William</p>
+                    </div>
+                    <a class="card-item__link" href="#">View Details</a>
+                  </li>
+                  <!-- third -->
+                  <li class="card-list__items-info">
+                    <div class="card-item__type">
+                      <img
+                        class="card-yellow"
+                        src="./images/yellow-card.svg"
+                        alt="yellow-card"
+                      />
+                      <div>
+                        <p class="card-item__type-top">Card Type</p>
+                        <p class="card-item__type-bottom">Secondary</p>
+                      </div>
+                    </div>
+                    <div class="card-item__bank">
+                      <p class="card-item__type-top">Bank</p>
+                      <p class="card-item__type-bottom">DBL Bank</p>
+                    </div>
+                    <div class="card-item__card-number">
+                      <p class="card-item__type-top">Card Number</p>
+                      <p class="card-item__type-bottom">**** **** 5600</p>
+                    </div>
+                    <div class="card-item__namain-card">
+                      <p class="card-item__type-top">Namain Card</p>
+                      <p class="card-item__type-bottom">William</p>
+                    </div>
+                    <a class="card-item__link" href="#">View Details</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </section>
+          <!-- end of second section-->
+          <!-- begin of third section -->
+          <section class="add-card__section">
+            <div class="add-card__container">
+              <h2 class="add-card__title">Add New Card</h2>
+              <div class="add-card__form">
+                <p class="add-card__description">
+                  Credit Card generally means a plastic card issued by Scheduled
+                  Commercial Banks assigned to a Cardholder, with a credit
+                  limit, that can be used to purchase goods and services on
+                  credit or obtain cash advances.
+                </p>
+                <form action="">
+                  <ul class="add-card__inputs">
+                    <li class="add-card__input-item">
+                      <p class="add-card__field">Card Type</p>
+                      <input
+                        class="add-card__input"
+                        type="text"
+                        placeholder="Classic"
+                      />
+                    </li>
+                    <li class="add-card__input-item">
+                      <p class="add-card__field">Name On Card</p>
+                      <input
+                        class="add-card__input"
+                        type="text"
+                        placeholder="My Cards"
+                      />
+                    </li>
+                    <li class="add-card__input-item">
+                      <p class="add-card__field">Card Number</p>
+                      <input
+                        class="add-card__input"
+                        type="number"
+                        placeholder="**** **** **** ****"
+                      />
+                    </li>
+                    <li class="add-card__input-item">
+                      <p class="add-card__field">Expiration Date</p>
+                      <input
+                        class="add-card__input"
+                        type="number"
+                        placeholder="MM/YY"
+                      />
+                    </li>
+                  </ul>
+                  <button class="add-card__button">Add Card</button>
+                </form>
+              </div>
+            </div>
+            <div class="card-setting__container">
+              <h2 class="card-setting__title">Card Setting</h2>
+              <ul class="card-setting__options">
+                <!-- first -->
+                <li class="card-setting__item">
+                  <img
+                    class="card-setting__image-yellow"
+                    src="./images/yellow-option.svg"
+                    alt="yellow"
+                  />
+                  <div class="card-setting__item-info">
+                    <a class="card-setting__item-title">Block Card</a>
+                    <p class="card-settting__item-description">
+                      Instantly block your card
+                    </p>
+                  </div>
+                </li>
+                <!-- second -->
+                <li class="card-setting__item">
+                  <img
+                    class="card-setting__image-blue"
+                    src="./images/blue-option.svg"
+                    alt="blue"
+                  />
+                  <div>
+                    <a class="card-setting__item-title">Change Pin Code</a>
+                    <p class="card-settting__item-description">
+                      Choose another pin code
+                    </p>
+                  </div>
+                </li>
+                <!-- third -->
+                <li class="card-setting__item">
+                  <img
+                    class="card-setting__image-pink"
+                    src="./images/pink-option.svg"
+                    alt="pink"
+                  />
+                  <div>
+                    <a class="card-setting__item-title">Add to Google Pay</a>
+                    <p class="card-settting__item-description">
+                      Withdraw without any card
+                    </p>
+                  </div>
+                </li>
+                <!-- four -->
+                <li class="card-setting__item">
+                  <img
+                    class="card-setting__image-green"
+                    src="./images/green-option.svg"
+                    alt="green"
+                  />
+                  <div>
+                    <a class="card-setting__item-title">Add to Apple Pay</a>
+                    <p class="card-settting__item-description">
+                      Withdraw without any card
+                    </p>
+                  </div>
+                </li>
+                <!-- fifth -->
+                <li class="card-setting__item">
+                  <img
+                    class="card-setting__image-green"
+                    src="./images/green-option.svg"
+                    alt="green"
+                  />
+                  <div>
+                    <a class="card-setting__item-title">Add to Apple Store</a>
+                    <p class="card-settting__item-description">
+                      Withdraw without any card
+                    </p>
+                  </div>
+                </li>
+              </ul>
             </div>
           </section>
         </main>
