--- a/lesson_13-adaptive/index.html
+++ b/lesson_13-adaptive/index.html
@@ -32,6 +32,68 @@
           </button>
         </div>
       </section>
+      <section class="testemonials">
+        <img class="testemonials__img" src="./images/guy.png" alt="guy" />
+        <div class="testemonials-content">
+          <h2 class="testemonials__title">What our customers thought?</h2>
+          <p class="testemonials__description">
+            Euismod magna id purus eget nunc ligula suspendisse dui netus.
+            Condimentum blandit rutrum at mauris enim pulvinar duis etiam duis.
+          </p>
+          <p class="testemonials__name">Holly Davidson</p>
+          <div class="testemonials__arrows-pic">
+            <img
+              class="testemonials__pic"
+              src="./images/arrow___black.svg"
+              alt="black-arrow"
+            />
+            <img
+              class="testemonials__pic"
+              src="./images/arrow__yellow.svg"
+              alt="yellow-arrow"
+            />
+          </div>
+        </div>
+      </section>
+      <section class="benefits">
+        <img
+          class="benefits__img"
+          src="./images/benefits-pic.svg"
+          alt="benefits-image"
+        />
+        <div class="benefits-content">
+          <h2 class="benefits__title">Cursus Integer consequat Tristique.</h2>
+          <ul class="benefit-list">
+            <li class="benefits__item">
+              <img src="./images/checker.svg" alt="checker" />
+              <p class="benefits__text">Cursus Integer</p>
+            </li>
+            <li class="benefits__item">
+              <img src="./images/checker.svg" alt="checker" />
+              <p class="benefits__text">Integer Consequat</p>
+            </li>
+            <li class="benefits__item">
+              <img src="./images/checker.svg" alt="checker" />
+              <p class="benefits__text">Tellus Euismod Pellentesque</p>
+            </li>
+            <li class="benefits__item">
+              <img src="./images/checker.svg" alt="checker" />
+              <p class="benefits__text">Aliquot Tristique</p>
+            </li>
+            <li class="benefits__item">
+              <img src="./images/checker.svg" alt="checker" />
+              <p class="benefits__text">Pellentesque Tempus</p>
+            </li>
+            <li class="benefits__item">
+              <img src="./images/checker.svg" alt="checker" />
+              <p class="benefits__text">Mauris Fermentum Praesent</p>
+            </li>
+          </ul>
+          <button class="benefits__btn">
+            Lorem Ipsum <img src="./images/aroow-blackk.svg" alt="arrow" />
+          </button>
+        </div>
+      </section>
     </main>
   </body>
 </html>
