final work lesson 13

--- a/lesson_13-adaptive/index.html
+++ b/lesson_13-adaptive/index.html
@@ -33,7 +33,9 @@
         </div>
       </section>
       <section class="testemonials">
-        <img class="testemonials__img" src="./images/guy.png" alt="guy" />
+        <div class="testemonials__wrapper">
+          <img class="testemonials__img" src="./images/guy.png" alt="guy" />
+        </div>
         <div class="testemonials-content">
           <h2 class="testemonials__title">What our customers thought?</h2>
           <p class="testemonials__description">
@@ -56,11 +58,13 @@
         </div>
       </section>
       <section class="benefits">
-        <img
-          class="benefits__img"
-          src="./images/benefits-pic.svg"
-          alt="benefits-image"
-        />
+        <div class="benefit__wrap">
+          <img
+            class="benefits__img"
+            src="./images/benefits-pic.svg"
+            alt="benefits-image"
+          />
+        </div>
         <div class="benefits-content">
           <h2 class="benefits__title">Cursus Integer consequat Tristique.</h2>
           <ul class="benefit-list">
@@ -90,7 +94,12 @@
             </li>
           </ul>
           <button class="benefits__btn">
-            Lorem Ipsum <img src="./images/aroow-blackk.svg" alt="arrow" />
+            Lorem Ipsum
+            <img
+              class="benefit__arrow-black"
+              src="./images/black-arrow.svg"
+              alt="arrow"
+            />
           </button>
         </div>
       </section>
